--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,9 @@
 @source "../.flowbite-react/class-list.json";
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+#root,
+body {
+  width: 100%;
+  height: 100%;
+}
